--- a/src/components/shared/form/FormFields.module.scss
+++ b/src/components/shared/form/FormFields.module.scss
@@ -1,5 +1,11 @@
 .inputGroup {
   margin-bottom: 18px;
+  display: block;
+  width: 100%;
+}
+
+.searchInputGroup {
+  margin-bottom: 18px;
   display: flex;
   align-items: stretch;
   width: 100%;
